policy-controller/k8s-required-labels-violation.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dhl
  # labels:
  #   environment: development
  #   team: engineering
